<resources>
    <string name="app_name">Bia</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_trip_note">AddTripNoteActivity</string>
    <string name="type_here">Type here</string>
    <string name="max_length">MAX : 300 CHARACTERS</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="submit_photos">Submit Photos</string>
    <string name="caption">Add a caption...</string>
    <string name="add_tags">Add tags</string>
    <string name="add_location">Add location</string>
    <string name="save_details">Save Details</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="button_continue">Continue</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="notification">Notification</string>
    <string name="been_there">Been There</string>
    <string name="share_feedback">Share feedback</string>
    <string name="feedback_text">You are awesome. Share your feedback below. You can also mail us on reach@bia-app.com</string>
    <string name="feedback_email"></string>
    <string name="coupon_code">Coupon Code</string>
    <string name="invite_friends">Invite friends and earn</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile Info</string>
    <string name="notifications">Notifications</string>
    <string name="rate_us">Rate us on Play Store</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="location_permission_text">Access to current location</string>
    <string name="location_permission_description">To log your trip</string>
    <string name="auto_checkin_permission_text">Automatically Check-in</string>
    <string name="auto_checkin_permission_desc">To automatically check-in nearby locations on your trip</string>
    <string name="camera_permission_text">Access to camera roll</string>
    <string name="camera_permission_desc">To upload your trip photos and videos</string>
    <string name="version"></string>
    <string name="facebook">Facebook</string>
    <string name="fb_permission_desc">To include your posts, check-ins and photos during your trip</string>
    <string name="fb_share">Allow app to post this trip on your profile</string>
    <string name="twitter">Twitter</string>
    <string name="gallery">Gallery</string>
    <string name="twitter_permission_desc">To include your tweets during your trip</string>
    <string name="instagram">Instagram</string>
    <string name="insta_permission_desc">To include your photos during your trip</string>
    <string name="wah_sync_permission_text">Sync</string>
    <string name="wah_sync_permission_desc">Upload your trip data while on trip to keep in sync &amp; avoid data loss</string>
    <string name="logout">LOGOUT</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search_people">Search People</string>
    <string name="search">Search</string>
    <string name="phonebook_caps">PHONEBOOK</string>
    <string name="twitter_caps">TWITTER</string>
    <string name="facebook_caps">FACEBOOK</string>
    <string name="start_trip_log_header">Log your Trip \n&amp; Relive it Later</string>
    <string name="signup_header">Log your Trip &amp;\nRelive it Later</string>
    <string name="sign_up_sharer_name">INR 500 from %1$s</string>
    <string name="start_trip_log_subheader">Create beautiful trip journals effortlessly.
        \nKeep them private, share with friends &amp; family or inspire others</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
    <string name="title_activity_journal">JournalActivity</string>
    <string name="title_activity_journal01">Journal01Activity</string>
    <string name="title_activity_journal03"></string>
    <string name="title_activity_journal04">Journal04Activity</string>
    <string name="Trip_name_placeholder">Trip Name</string>
    <string name="upload_timeline_wallpaper">Upload Image</string>
    <string name="title_activity_selected_photo">SelectedPhotoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_up_email">SignUpEmailActivity</string>
    <string name="title_activity_sign_up_facebook">SignUpFacebookActivity</string>
    <string name="signup_email">Sign Up with Email</string>
    <string name="login_email">Login with Email</string>
    <string name="signup_facebook">Continue with Facebook</string>
    <string name="finish">FINISH TRIP</string>
    <string name="str_btn_draw">draw</string>
    <string name="title_activity_set_photo_location">SetPhotoLocationActivity</string>
    <string name="required">Required</string>
    <string name="toat_trip_start_error">An error occured while creating trip!</string>
    <string name="login_error">Check your email address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="map_title">TOTAL DISTANCE</string>
    <string name="title_activity_custom_grid">CustomGridActivity</string>
    <string name="title_activity_custom_gallery">CustomGalleryActivity</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="trip_overview">TRIP OVERVIEW</string>
    <string name="summary_distance">DISTANCE</string>
    <string name="summary_duration">DURATION</string>
    <string name="social_overview">SOCIAL OVERVIEW</string>
    <string name="summary_fb">FB POSTS</string>
    <string name="summary_twitter">TWEETS</string>
    <string name="summary_instagram">INSTAGRAM</string>
    <string name="summary_notes">NOTES</string>
    <string name="summary_check_in">CHECK-INS</string>
    <string name="summary_photos">PHOTOS</string>
    <string name="toast_add_photo_error">An Error occured while adding the photo</string>
    <string name="toast_add_note_error">An Error occured while adding the note</string>
    <string name="toast_add_check_in_error">An Error occured while checking in</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_trip_settings">TripSettingsActivity</string>
    <string name="facebook_permissions_error_text">Facebook sync is disabled as required permissions are not given to the app!</string>
    <string name="twitter_permissions_error_text">Twitter sync is disabled as required permissions are not given to the app!</string>
    <string name="instagram_permissions_error_text">Instagram sync is disabled as required permissions are not given to the app!</string>
    <string name="permissions">Permissions</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_add_people">AddPeopleActivity</string>
    <string name="title_activity_fb">FBActivity</string>
    <string name="title_activity_yjk">yjk</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_inst">InstActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_route_map">RouteMapActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_distance">DistanceActivity</string>
    <string name="title_activity_checkin">CheckInActivity</string>
    <string name="ok">OK</string>
    <string name="finish_trip_warning">Do you want end the current trip?</string>
    <string name="finish_trip_lower">Finish Trip   </string>
    <string name="loading_contact">Loading Contacts...</string>
    <string name="contacts_not_found">No Contacts found</string>
    <string name="loading_facebook">Loading Facebook friends</string>
    <string name="error_loading_facebook">Error loading facebook friends...</string>
    <string name="no_facebook_friends">No Facebook friends found</string>
    <string name="publish_trip">Publish Trip</string>
    <string name="action_trip_change_photo">Change Photo</string>
    <string name="action_reorder_posts">Reorder Posts</string>
    <string name="action_delete_posts">Delete Posts</string>
    <string name="action_edit_people">Edit People</string>
    <string name="action_share_journal">Share Journal</string>
    <string name="action_edit_trip_name">Edit Trip Name</string>
    <string name="give_permission">GIVE PERMISSION</string>
    <string name="not_now">NOT NOW</string>
    <string name="add_people">Add People</string>
    <string name="share_people">Share People</string>
    <string name="title_activity_edit_photo_details">EditPhotoDetailsActivity</string>
    <string name="title_activity_been_there">BeenThereActivity</string>
    <string name="title_activity_publish_trip">PublishTripActivity</string>
    <string name="title_activity_timeline_edit">TimelineEditActivity</string>
    <string name="title_activity_change_image">ChangeImageActivity</string>
    <string name="title_activity_duration">DurationActivity</string>
    <string name="title_activity_day_duration">DayDurationActivity</string>
    <string name="title_activity_reorder">ReorderActivity</string>
    <string name="apply">APPLY</string>
    <string name="invalid_coupon">Invalid Coupon Code!</string>
    <string name="used_coupon">Coupon already applied</string>
    <string name="enter_valid">Please enter valid coupon code and try again</string>
    <string name="action_delete_journal">Delete Trip</string>
    <string name="action_unpublish_journal">Unpublish Trip</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_reset">Setting up a new password for your account</string>
    <string name="action_edit_posts">Edit Posts</string>
    <string name="finish_trip_title">Reached back home?\nWant to finish your trip?</string>
    <string name="finish_trip_detail">On finishing trip, Bia will stop capturing your location, photos &amp; social posts and start saving your trip.</string>
    <string name="finish_trip_skip">I\'ll do it later</string>
    <string name="publish_trip_success_msg">Your trip is saved successfully!</string>
    <string name="publish_trip_title">Publish &amp; share it with others</string>
    <string name="publish_trip_share_fb">Also share on facebook</string>
    <string name="upload_error">Your trip is finished, but it\'s not saved. Saving a trip is required before you can share or publish it.</string>
    <string name="try_again">Try Again</string>
    <string name="report_error">Report Issue</string>
    <string name="activity_invite_friends_title">Get a Flipkart voucher worth INR 500</string>
    <string name="activity_invite_friends_desc">As soon as they create and publish their first trip. They get a Flipkart voucher worth INR 500 too.</string>
    <string name="activity_invite_friends_share">Share your personal link with friends.</string>
    <string name="activity_invite_friends_button_text">Invite friends</string>
    <string name="activity_invite_friends_details">Details</string>
    <string name="publish_trip_share">Your trip is published successfully!</string>
    <string name="publish_trip_share_btn">Share trip</string>
</resources>