<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/finish_trip_fragment_background"
    android:padding="@dimen/screen_padding_double"
    android:visibility="gone">

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_finish_trip_error"
        android:layout_centerHorizontal="true"
        android:src="@drawable/savefailed" />

    <TextView
        android:id="@+id/tv_finish_trip_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/screen_padding"
        android:gravity="center"
        android:text="@string/upload_error"
        android:textSize="@dimen/text_size_14" />

    <Button
        android:id="@+id/retry_trip_btn"
        style="@style/PrimaryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip_upload"
        android:layout_marginBottom="@dimen/screen_padding_plus_half"
        android:background="@color/app_orange"
        android:text="@string/try_again"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/skip_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/screen_padding"
        android:text="@string/finish_trip_skip"
        android:textColor="@color/app_sky_blue"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/report_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:paddingRight="@dimen/screen_padding"
        android:text="@string/report_error"
        android:textColor="@color/app_sky_blue"
        android:textSize="@dimen/text_size_14" />
</RelativeLayout>