<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_publish_success_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/finish_trip_fragment_background"
    android:padding="@dimen/screen_padding_double"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/success_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/finish_checkmark" />

        <TextView
            android:id="@+id/tv_finish_trip_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/screen_padding"
            android:gravity="center"
            android:text="@string/publish_trip_share"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <Button
        android:id="@+id/share_trip_btn"
        style="@style/PrimaryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip_share"
        android:layout_marginBottom="@dimen/screen_padding_plus_half"
        android:background="@color/app_orange"
        android:text="@string/publish_trip_share_btn"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/skip_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish_trip_skip"
        android:textColor="@color/app_sky_blue"
        android:textSize="@dimen/text_size_14" />
</RelativeLayout>