<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weareholidays.bia.activities.login.PasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/password_reset"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint=""
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/signup_email"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/signup_email"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/confirm"
        android:singleLine="true" />

    <View
        android:id="@+id/first"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/password"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5sp"
        android:background="@color/underline1" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/signup_lock"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/signup_lock"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <View
        android:id="@+id/second"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/confirm"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5sp"
        android:background="@color/underline1" />

    <Button
        android:id="@+id/continue_btn"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/app_orange"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>
